Fix #789 - Not centered messages on list.

--- a/src/app/styl/favorite_browser/favorite_list.styl
+++ b/src/app/styl/favorite_browser/favorite_list.styl
@@ -20,6 +20,9 @@
 		align-items: flex-start
 		width: calc(100% - 5px)
 		
+		& > div
+			margin: 0 auto
+
 		.movie-item
 			width: 134px
 			&:empty
